--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -9,26 +9,20 @@
     <title>Málaga Dream Home</title>
 
     <!-- Icono pestaña del navegador -->
-    <link rel="icon" type="favicon2/png" href="./img/favicon2.png">
+    <link rel="icon" type="image/png" href="./img/favicon2.png">
 
     <!-- All CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <!-- iconos bootstrap -->
-    <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
-    <!-- select del bootstrap -->
-
     <link rel="stylesheet" href="css/sobreNosotros.css">
-
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a href="index.html" class="navbar-brand"> <span class="text-primary">Málaga</span>DreamHome</a>
-
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarS"
                 aria-controls="navbarS" aria-expanded="false" aria-label="Botón navegación">
                 <span class="navbar-toggler-icon"></span>
@@ -53,70 +47,71 @@
     </nav>
 
     <!-- PREGUNTAS FRECUENTES -->
-    <section class="questions container">
-        <h2 class="subtitle">Preguntas frecuentes</h2>
-        <p class="questions_paragraph">
-            A continuación se muestra un listado de preguntas comunes que suelen hacer nuestros usuarios acerca de las
-            diferentes posibilidades que ofrecemos, para dar un servicio eficiente y sencillo.
-        </p>
-        <section class="questions__container">
-            <article class="questions__padding">
-                <div class="questions__answer">
-                    <h3 class="questions__title">
-                        ¿Cómo contacto?
-                        <span class="questions__arrow">
-                            <i class="questions__i bi bi-arrow-up-short"></i>
-                        </span>
-                    </h3>
-                    <div class="questions__show">
-                            <ul>
-                                <li>Si quiere información adicional acerca de un inmueble, dentro del mismo encontrará un formulario de consulta; tras rellenarlo,
-                                    uno de nuestros miembros se pondrá en contacto con usted.</li>
-                                <li>Si desea poner en venta o alquiler su propiedad, en el apartado<b> "Gestiona tu propiedad"</b> podrá rellenar un formulario 
-                                    con sus datos de contacto, y de igual manera, uno de nuestros agentes se pondrá en contacto con usted para comenzar la gestión de su propiedad.</li>
-                                <li>Si tiene alguna duda o consulta referente a otros temas, podrá ponerse en contacto con nosotros a través del correo electrónico o el 
-                                    número de teléfono que aparecen en el pie de página.</li>
-                            </ul> 
-                    </div>
+<section class="questions container">
+    <h2 class="subtitle" tabindex="0">Preguntas frecuentes</h2>
+    <p class="questions_paragraph" tabindex="0">
+        A continuación se muestra un listado de preguntas comunes que suelen hacer nuestros usuarios acerca de las
+        diferentes posibilidades que ofrecemos, para dar un servicio eficiente y sencillo.
+    </p>
+    <section class="questions__container">
+        <article class="questions__padding">
+            <div class="questions__answer">
+                <h3 class="questions__title" tabindex="0" aria-expanded="false">
+                    ¿Cómo contacto?
+                    <span class="questions__arrow">
+                        <i class="questions__i bi bi-arrow-up-short"></i>
+                    </span>
+                </h3>
+                <div class="questions__show" tabindex="0" aria-hidden="true">
+                    <ul>
+                        <li>Si quiere información adicional acerca de un inmueble, dentro del mismo encontrará un formulario de consulta; tras rellenarlo,
+                            uno de nuestros miembros se pondrá en contacto con usted.</li>
+                        <li>Si desea poner en venta o alquiler su propiedad, en el apartado<b> "Gestiona tu propiedad"</b> podrá rellenar un formulario 
+                            con sus datos de contacto, y de igual manera, uno de nuestros agentes se pondrá en contacto con usted para comenzar la gestión de su propiedad.</li>
+                        <li>Si tiene alguna duda o consulta referente a otros temas, podrá ponerse en contacto con nosotros a través del correo electrónico o el 
+                            número de teléfono que aparecen en el pie de página.</li>
+                    </ul> 
                 </div>
-            </article>
+            </div>
+        </article>
 
-            <article class="questions__padding">
-                <div class="questions__answer">
-                    <h3 class="questions__title">
-                        ¿Cómo busco inmuebles?
-                        <span class="questions__arrow">
-                            <i class="questions__i bi bi-arrow-up-short"></i>
-                        </span>
-                    </h3>
-                    <div class="questions__show">
-                        <p>
-                            En la página <b>"Inicio"</b> podrá encontrar un listado con los inmuebles disponibles. Si desea filtrar la búsqueda para encontrar
-                            un tipo de inmueble más específico, podrá hacerlo a través de la barra de búsqueda, donde hay varios filtros y categorías para seleccionar. 
-                        </p>
-                    </div>
+        <article class="questions__padding">
+            <div class="questions__answer">
+                <h3 class="questions__title" tabindex="0" aria-expanded="false">
+                    ¿Cómo busco inmuebles?
+                    <span class="questions__arrow">
+                        <i class="questions__i bi bi-arrow-up-short"></i>
+                    </span>
+                </h3>
+                <div class="questions__show" tabindex="0" aria-hidden="true">
+                    <p>
+                        En la página <b>"Inicio"</b> podrá encontrar un listado con los inmuebles disponibles. Si desea filtrar la búsqueda para encontrar
+                        un tipo de inmueble más específico, podrá hacerlo a través de la barra de búsqueda, donde hay varios filtros y categorías para seleccionar. 
+                    </p>
                 </div>
-            </article>
+            </div>
+        </article>
 
-            <article class="questions__padding">
-                <div class="questions__answer">
-                    <h3 class="questions__title">
-                        ¿Cómo calculo mi hipoteca?
-                        <span class="questions__arrow">
-                            <i class="questions__i bi bi-arrow-up-short"></i>
-                        </span>
-                    </h3>
-                    <div class="questions__show">
-                        <p>
-                            En la sección <b>"Calculadora de hipoteca"</b> ofrecemos una herramienta que le permitirá simular la cuota mensual de su hipoteca. Tan solo deberá
-                            introducir los datos que se le solicitan y la calculadora le mostrará el resultado. Los campos que se requieren vienen explicados en la misma 
-                            sección.
-                        </p>
-                    </div>
+        <article class="questions__padding">
+            <div class="questions__answer">
+                <h3 class="questions__title" tabindex="0" aria-expanded="false">
+                    ¿Cómo calculo mi hipoteca?
+                    <span class="questions__arrow">
+                        <i class="questions__i bi bi-arrow-up-short"></i>
+                    </span>
+                </h3>
+                <div class="questions__show" tabindex="0" aria-hidden="true">
+                    <p>
+                        En la sección <b>"Calculadora de hipoteca"</b> ofrecemos una herramienta que le permitirá simular la cuota mensual de su hipoteca. Tan solo deberá
+                        introducir los datos que se le solicitan y la calculadora le mostrará el resultado. Los campos que se requieren vienen explicados en la misma 
+                        sección.
+                    </p>
                 </div>
-            </article>
-        </section>
+            </div>
+        </article>
     </section>
+</section>
+
 
     <!-- INTEGRANTES DEL GRUPO -->
     <section class="team section-padding">
@@ -124,33 +119,29 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-header text-center text-white pb-5">
-                        <h2>Integrantes del equipo</h2>
-                        <p class="parrafo-perfil">
+                        <h2 tabindex="0">Integrantes del equipo</h2>
+                        <p class="parrafo-perfil" tabindex="0">
                             Nuestro equipo consta de cuatro integrantes de una gran calidad <br> y profesionalidad
                         </p>
                     </div>
                 </div>
             </div>
-    
+
             <div class="container">
                 <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
                     <div class="col">
                         <div class="card text-center bg-dark">
                             <div class="card-body text-white">
-                                <img src="img/persona.jpg" class="img-fluid rounded-circle perfil" alt="">
-                                <h3 class="card-title py-2">Ana</h3>
-                                <p class="card-text">
+                                <img src="img/persona.jpg" class="img-fluid rounded-circle perfil" alt="Foto de Ana" tabindex="0">
+                                <h3 class="card-title py-2" tabindex="0">Ana</h3>
+                                <p class="card-text" tabindex="0">
                                     Agente inmobiliaria con más de 15 años de experiencia en el mercado.
                                 </p>
                                 <p class="socials">
-                                    <a href="https://www.twitter.com" target="_blank"
-                                        class="bi bi-twitter mx-1"></a>
-                                    <a href="https://www.facebook.com" target="_blank"
-                                        class="bi bi-facebook mx-1"></a>
-                                    <a href="https://www.instagram.com" target="_blank"
-                                        class="bi bi-instagram mx-1"></a>
-                                    <a href="https://www.linkedin.com" target="_blank"
-                                        class="bi bi-linkedin mx-1"></a>
+                                    <a href="https://www.twitter.com" target="_blank" class="bi bi-twitter mx-1" aria-label="Twitter"></a>
+                                    <a href="https://www.facebook.com" target="_blank" class="bi bi-facebook mx-1" aria-label="Facebook"></a>
+                                    <a href="https://www.instagram.com" target="_blank" class="bi bi-instagram mx-1" aria-label="Instagram"></a>
+                                    <a href="https://www.linkedin.com" target="_blank" class="bi bi-linkedin mx-1" aria-label="LinkedIn"></a>
                                 </p>
                             </div>
                         </div>
@@ -158,20 +149,16 @@
                     <div class="col">
                         <div class="card text-center bg-dark">
                             <div class="card-body text-white">
-                                <img src="img/persona2.jpg" class="img-fluid rounded-circle perfil" alt="">
-                                <h3 class="card-title py-2">Alejandro</h3>
-                                <p class="card-text">
+                                <img src="img/persona2.jpg" class="img-fluid rounded-circle perfil" alt="Foto de Alejandro" tabindex="0">
+                                <h3 class="card-title py-2" tabindex="0">Alejandro</h3>
+                                <p class="card-text" tabindex="0">
                                     Tiene una sólida reputación en el sector inmobiliario comercial.
                                 </p>
                                 <p class="socials">
-                                    <a href="https://www.twitter.com" target="_blank"
-                                        class="bi bi-twitter mx-1"></a>
-                                    <a href="https://www.facebook.com" target="_blank"
-                                        class="bi bi-facebook mx-1"></a>
-                                    <a href="https://www.instagram.com" target="_blank"
-                                        class="bi bi-instagram mx-1"></a>
-                                    <a href="https://www.linkedin.com" target="_blank"
-                                        class="bi bi-linkedin mx-1"></a>
+                                    <a href="https://www.twitter.com" target="_blank" class="bi bi-twitter mx-1" aria-label="Twitter"></a>
+                                    <a href="https://www.facebook.com" target="_blank" class="bi bi-facebook mx-1" aria-label="Facebook"></a>
+                                    <a href="https://www.instagram.com" target="_blank" class="bi bi-instagram mx-1" aria-label="Instagram"></a>
+                                    <a href="https://www.linkedin.com" target="_blank" class="bi bi-linkedin mx-1" aria-label="LinkedIn"></a>
                                 </p>
                             </div>
                         </div>
@@ -179,20 +166,16 @@
                     <div class="col">
                         <div class="card text-center bg-dark">
                             <div class="card-body text-white">
-                                <img src="img/persona3.png" class="img-fluid rounded-circle perfil" alt="">
-                                <h3 class="card-title py-2">Rubén</h3>
-                                <p class="card-text">
+                                <img src="img/persona3.png" class="img-fluid rounded-circle perfil" alt="Foto de Rubén" tabindex="0">
+                                <h3 class="card-title py-2" tabindex="0">Rubén</h3>
+                                <p class="card-text" tabindex="0">
                                     Conocedor de la zona de Málaga y experto en la venta de propiedades.
                                 </p>
                                 <p class="socials">
-                                    <a href="https://www.twitter.com" target="_blank"
-                                        class="bi bi-twitter mx-1"></a>
-                                    <a href="https://www.facebook.com" target="_blank"
-                                        class="bi bi-facebook mx-1"></a>
-                                    <a href="https://www.instagram.com" target="_blank"
-                                        class="bi bi-instagram mx-1"></a>
-                                    <a href="https://www.linkedin.com" target="_blank"
-                                        class="bi bi-linkedin mx-1"></a>
+                                    <a href="https://www.twitter.com" target="_blank" class="bi bi-twitter mx-1" aria-label="Twitter"></a>
+                                    <a href="https://www.facebook.com" target="_blank" class="bi bi-facebook mx-1" aria-label="Facebook"></a>
+                                    <a href="https://www.instagram.com" target="_blank" class="bi bi-instagram mx-1" aria-label="Instagram"></a>
+                                    <a href="https://www.linkedin.com" target="_blank" class="bi bi-linkedin mx-1" aria-label="LinkedIn"></a>
                                 </p>
                             </div>
                         </div>
@@ -200,20 +183,16 @@
                     <div class="col">
                         <div class="card text-center bg-dark">
                             <div class="card-body text-white">
-                                <img src="img/persona4.png" class="img-fluid rounded-circle perfil" alt="">
-                                <h3 class="card-title py-2">Francisco</h3>
-                                <p class="card-text">
+                                <img src="img/persona4.png" class="img-fluid rounded-circle perfil" alt="Foto de Francisco" tabindex="0">
+                                <h3 class="card-title py-2" tabindex="0">Francisco</h3>
+                                <p class="card-text" tabindex="0">
                                     Experto en finanzas, confiable y profesional, 20 años de experiencia.
                                 </p>
                                 <p class="socials">
-                                    <a href="https://www.twitter.com" target="_blank"
-                                        class="bi bi-twitter mx-1"></a>
-                                    <a href="https://www.facebook.com" target="_blank"
-                                        class="bi bi-facebook mx-1"></a>
-                                    <a href="https://www.instagram.com" target="_blank"
-                                        class="bi bi-instagram mx-1"></a>
-                                    <a href="https://www.linkedin.com" target="_blank"
-                                        class="bi bi-linkedin mx-1"></a>
+                                    <a href="https://www.twitter.com" target="_blank" class="bi bi-twitter mx-1" aria-label="Twitter"></a>
+                                    <a href="https://www.facebook.com" target="_blank" class="bi bi-facebook mx-1" aria-label="Facebook"></a>
+                                    <a href="https://www.instagram.com" target="_blank" class="bi bi-instagram mx-1" aria-label="Instagram"></a>
+                                    <a href="https://www.linkedin.com" target="_blank" class="bi bi-linkedin mx-1" aria-label="LinkedIn"></a>
                                 </p>
                             </div>
                         </div>
@@ -251,13 +230,11 @@
         </div>
     </footer>
 
-
     <!-- All Js -->
-     <!-- All Js -->
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
-   
 </body>
+
 </html>
